java docs: chunked-upload guide for full doc parity (D-186) (#72)
* java docs: add a chunked-upload guide for doc parity (D-186)

D-183 documented BoxChunkedUpload in the ship README but left the generated
docs/ guide tree (auth/pagination/errors) without a chunked-upload page — the
one shipped feature lacking a reference guide.

- docs.rs: emit docs/chunked-upload.md (CHUNKED_UPLOAD_GUIDE) and link it from
  the index. Both are gated on emits_chunked_upload(analysis) (VR-6), so a
  synthetic spec that never emits BoxChunkedUpload gets neither a dangling guide
  nor a dead index link. The guide mirrors the ship README: upload/uploadVersion
  call sites, the opt-in --enable-preview note, and the BoxApiException failure
  mode cross-linked to the errors guide.
- compile_output.rs: the determinism gate asserts the guide ships on the real
  spec (names the class + preview flag) and the index links it; the docs-content
  gate checks the real call sites.
- DECISIONS.md (D-186), PROGRESS.md.

cargo fmt + clippy clean; the 8 Java compile_output gates pass.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* address CodeRabbit on #72: --enable-preview is needed at compile time too

A caller that references BoxChunkedUpload (a preview-marked class) must pass
--enable-preview to javac (with --release 26), not just to java at run time —
otherwise the compile fails with 'uses preview features'. The guide and the
ship README said run-time only; both now state both compile and run time. Same
fix applied to ship.rs's README section to keep the two doc surfaces consistent.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

---------

Co-authored-by: Claude <noreply@anthropic.com>